--- a/src/app/stack/stack-details/stack-details.component.html
+++ b/src/app/stack/stack-details/stack-details.component.html
@@ -1,20 +1,22 @@
 <div class="stack-report">
-    <div *ngIf="!error">
-        <tabset *ngIf="dataLoaded">
-            <tab *ngFor="let tabz of tabs" (select)="tabSelection(tabz)" (deselect)="tabDeSelection(tabz)" (removed)="removeTabHandler(tabz)"
-                [customClass]="tabz.active ? 'active-menu-item' : 'inactive-menu'">
-                <ng-template tabHeading>
-                    <i *ngIf="tabz.hasWarning" [ngClass]="{'pficon-warning-triangle-o': true, 'icon-severe': tabz.severity === 1, 'icon-moderate': tabz.severity === 2}"></i>
-                    <span [innerHtml]="tabz.title" style="margin-left: 5px"></span>
-                </ng-template>
-                <!-- Stack Report Design Revamp - BEGIN -->
-                <analytics-report-summary (onCardClick)="handleCardClick($event)" [report]="tabz.content"></analytics-report-summary>
-                <card-details [genericInformation]="genericInformation && genericInformation" *ngIf="cardDetails" [cardDetails]="cardDetails"
-                    [repoInfo]="repoInfo"></card-details>
-                <!-- Stack Report Design Revamp - END -->
-            </tab>
-        </tabset>
-    </div>
+
+    <tabset *ngIf="dataLoaded">
+        <tab *ngFor="let tabz of tabs" (select)="tabSelection(tabz)" (deselect)="tabDeSelection(tabz)"
+            (removed)="removeTabHandler(tabz)" [customClass]="tabz.active ? 'active-menu-item' : 'inactive-menu'">
+            <ng-template tabHeading>
+                <i *ngIf="tabz.hasWarning"
+                    [ngClass]="{'pficon-warning-triangle-o': true, 'icon-severe': tabz.severity === 1, 'icon-moderate': tabz.severity === 2}"></i>
+                <span [innerHtml]="tabz.title" style="margin-left: 5px"></span>
+            </ng-template>
+            <!-- Stack Report Design Revamp - BEGIN -->
+            <analytics-report-summary (onCardClick)="handleCardClick($event)" [report]="tabz.content">
+            </analytics-report-summary>
+            <card-details [genericInformation]="genericInformation && genericInformation" *ngIf="cardDetails"
+                [cardDetails]="cardDetails" [repoInfo]="repoInfo"></card-details>
+            <!-- Stack Report Design Revamp - END -->
+        </tab>
+    </tabset>
+
     <div *ngIf="!dataLoaded" class="pre-loader">
         <div class="pre-loader-spinner spinner spinner-lg"></div>
     </div>
