APPAI-1190 transitive addded to DirectDep

--- a/src/app/stack/card-details/component-information/component-information.component.less
+++ b/src/app/stack/card-details/component-information/component-information.component.less
@@ -130,4 +130,9 @@
             color: #2a9fd8;
         }
     }
+    .transitive {
+        text-align: center;
+        color: red;
+        font-size: 2em;
+    }
 }
