--- a/src/app/stack/stack-details/stack-details.component.less
+++ b/src/app/stack/stack-details/stack-details.component.less
@@ -5,145 +5,132 @@
 @steelBlue: #39a5dc;
 
 .stack-report {
-    /** Changes for the stack report design revamp latest */
-    .modal-header {
-        background-color: @headerBg;
+
+
+  /** Changes for the stack report design revamp latest */
+  .modal-header {
+    background-color: @headerBg;
+    color: @headerTextColor;
+    .close {
+        font-size: 50px;
+        padding: 0;
+        position: absolute;
+        right: 10px;
+        top: 0;
+        font-weight: 100;
         color: @headerTextColor;
-        .close {
-            font-size: 50px;
-            padding: 0;
-            position: absolute;
-            right: 10px;
-            top: 0;
-            font-weight: 100;
-            color: @headerTextColor;
-        }
     }
-    // .modal-body {
-    //   padding: unset;
+  }
+  // .modal-body {
+  //   padding: unset;
 
     .tab-container {
-        .nav-tabs {
-            border: none;
-            background: @headerBg;
-            color: @headerTextColor;
-            .active-menu-item {
-                .nav-link {
-                    &.active {
-                        background-color: inherit;
-                        color: inherit;
-                        border: none;
-                        box-shadow: inset -10px -14px 0px -10px @steelBlue;
-                    }
-                }
+      .nav-tabs {
+        border: none;
+        background: @headerBg;
+        color: @headerTextColor;
+        .active-menu-item {
+          .nav-link {
+            &.active {
+              background-color: inherit;
+              color: inherit;
+              border: none;
+              box-shadow: inset -10px -14px 0px -10px @steelBlue;
             }
-            li {
-                a {
-                    border: 0;
-                    &:hover {
-                        border: 0;
-                        color: inherit;
-                    }
-                }
-            }
+          }
         }
-        .icon-moderate:before {
-            color: #f5a625;
+        li {
+          a {
+            border: 0;
+            &:hover {
+              border: 0;
+              color: inherit;
+            }
+          }
+        }
+      }
+      .icon-moderate:before {
+          color: #f5a625;
         }
         .icon-severe:before {
-            color: #d1011c;
+          color: #d1011c;
         }
     }
-    // }
-    /** Changes for the stack report design revamp latest */
+ // }
+  /** Changes for the stack report design revamp latest */
 
-    .stack-reports-btn {
-        cursor: pointer;
+
+
+
+  .stack-reports-btn { cursor: pointer; }
+  .modal-width-class { width: 95%; }
+  .accordion-indicator {
+    top: unset;
+    margin-left: 10px;
+  }
+  .active-menu-item {
+    .nav-link {
+      &.active {
+        color: #000;
+        font-weight: bold;
+      }
     }
-    .modal-width-class {
-        width: 95%;
+  }
+  .pre-loader {
+    position: absolute;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    background: rgba(255, 255, 255, .5);
+    z-index: 99;
+    .pre-loader-spinner {
+      top: 50%;
     }
-    .accordion-indicator {
-        top: unset;
-        margin-left: 10px;
+  }
+  .error-msg {
+    text-align: center;
+    background: @color-pf-white;
+    border: none;
+    .warning-icon {
+      font-size: 6em;
+      i:before {
+        color: @color-pf-black-500;
+      }
     }
-    .active-menu-item {
-        .nav-link {
-            &.active {
-                color: #000;
-                font-weight: bold;
-            }
-        }
+    .container-progress {
+      width: 50%;
+      margin: 0 auto;
     }
-    .pre-loader {
-        position: absolute;
-        top: 0;
-        left: 0;
-        bottom: 0;
-        right: 0;
-        background: rgba(255, 255, 255, .5);
-        z-index: 99;
-        .pre-loader-spinner {
-            top: 50%;
-        }
+  }
+  .accordion-custom { cursor: pointer; }
+  .card.accordion-custom .card-header {
+    background: #6fc0f9;
+    color: @color-pf-white;
+    cursor: pointer;
+    .accordion-heading { float: left; }
+    .accordion-sub-heading {
+      float: right;
+      color: @color-pf-black;
     }
-    .error-msg {
-        text-align: center;
-        background: @color-pf-white;
-        border: none;
-        .warning-icon {
-            font-size: 6em;
-            i:before {
-                color: @color-pf-black-500;
-            }
-        }
-        .container-progress {
-            width: 50%;
-            margin: 0 auto;
-        }
+    &:after {
+      content: '';
+      clear: both;
+      float: none;
+      display: block;
     }
-    .accordion-custom {
-        cursor: pointer;
+  }
+  .error-wrapper {
+    position: relative;
+    height: 80%;
+    width: 50%;
+    margin: 5% auto;
+    .error-image {
+      .display-icon { font-size: 10vw; }
+      .not-found-class { color: #ff1f1c; }
+      .warning-class { color: #fb8c00; }
+      .progress-class { color: #3b5998; }
     }
-    .card.accordion-custom .card-header {
-        background: #6fc0f9;
-        color: @color-pf-white;
-        cursor: pointer;
-        .accordion-heading {
-            float: left;
-        }
-        .accordion-sub-heading {
-            float: right;
-            color: @color-pf-black;
-        }
-        &:after {
-            content: '';
-            clear: both;
-            float: none;
-            display: block;
-        }
-    }
-    .error-wrapper {
-        position: relative;
-        height: 80%;
-        width: 50%;
-        margin: 5% auto;
-        .error-image {
-            .display-icon {
-                font-size: 10vw;
-            }
-            .not-found-class {
-                color: #ff1f1c;
-            }
-            .warning-class {
-                color: #fb8c00;
-            }
-            .progress-class {
-                color: #3b5998;
-            }
-        }
-        .error-container {
-            position: relative;
-        }
-    }
+    .error-container { position: relative; }
+  }
 }
