--- a/src/app/stack/card-details/component-information/component-snippet/component-snippet.component.html
+++ b/src/app/stack/card-details/component-information/component-snippet/component-snippet.component.html
@@ -1,6 +1,6 @@
 <div class="analytics-snippet-information">
     <h4>Details of the dependency: <span class="component-name" [innerText]="component?.name"></span></h4>
-    <div *ngIf="component?.transitive;else component_version">
+    <div *ngIf="component?.transitive !== null;else component_version">
         <div
             [ngClass]="{'component-version left': true, 'normal-version-box': view === 'split', 'small-version-box': view === 'normal'}">
             <div class="col-xs-6">
@@ -18,7 +18,7 @@
         </div>
     </div>
     <ng-template #component_version>
-        <div *ngIf="!component.action;else companion_component">
+        <div *ngIf="!component.action || !component.allTransitiveDependencies ;else companion_component">
             <div
                 [ngClass]="{'component-version left': true, 'normal-version-box': view === 'split', 'small-version-box': view === 'normal'}">
                 <div class="col-xs-6">
@@ -119,7 +119,7 @@
     <div class="common-table component-tags"
         *ngIf="component?.allTransitiveDependencies && component?.allTransitiveDependencies.length>0">
         <div class="common-wrapper">
-            <span class="info-head">Show Transitives with Vulnerabilities</span>
+            <span class="info-head">Transitives with Vulnerabilities</span>
             <span [innerHtml]="component?.allTransitiveDependencies.length" class="badge"></span>
 
             <report-information [report]="component.transitiveInfo"></report-information>
@@ -136,7 +136,7 @@
 
     <!-- <report-information [genericInformation]="genericInformation" [report]="tabz.content" [repoInfo]="repoInfo"></report-information> -->
 
-    
+
 
     <div *ngIf="view === 'split'" class="github-osio-box">
         <div class="github left">
