--- a/src/app/stack/card-details/card-details.component.html
+++ b/src/app/stack/card-details/card-details.component.html
@@ -3,20 +3,21 @@
     <p [innerText]="details?.titleDescription"></p>
     <div *ngIf="details?.reportInformations && details?.reportInformations.length > 1">
         <tabset>
-            <tab *ngFor="let tabz of tabs"
-                (select)="tabz.active = true"
+            <tab *ngFor="let tabz of tabs" (select)="tabz.active = true"
                 [customClass]="tabz.active ? 'active-menu-item' : 'inactive-menu'">
                 <ng-template tabHeading>
                     <span [innerHtml]="tabz.title"></span>
                     <span [innerHtml]="tabz?.content?.componentDetails?.length || '0'" class="badge"></span>
                 </ng-template>
-                <report-information [genericInformation]="genericInformation" [report]="tabz.content" [repoInfo]="repoInfo"></report-information>
+                <report-information [genericInformation]="genericInformation" [report]="tabz.content"
+                    [repoInfo]="repoInfo"></report-information>
 
             </tab>
         </tabset>
     </div>
     <div *ngIf="details?.reportInformations && details?.reportInformations.length === 1">
-        <report-information [genericInformation]="genericInformation" [report]="details?.reportInformations[0]" [repoInfo]="repoInfo"></report-information>
+        <report-information [genericInformation]="genericInformation" [report]="details?.reportInformations[0]"
+            [repoInfo]="repoInfo"></report-information>
     </div>
     <div *ngIf="details?.reportInformations && details?.reportInformations.length === 0">
         <!-- Handle no information scenario -->
