--- a/src/app/stack/card-details/component-information/component-information.component.html
+++ b/src/app/stack/card-details/component-information/component-information.component.html
@@ -12,8 +12,10 @@
                         </div>
                         <div *ngSwitchCase="'component'">
                             <!-- Component Names -->
-                                <span [innerText]="comp?.name"></span>
-                                <span class="recommendation-reason" [tooltip]="component?.reason" *ngIf="component?.reason && type === 'recommendation' && comp?.name">Why this dependency?</span>
+                            <span [innerText]="comp?.name"></span>
+                            <span class="recommendation-reason" [tooltip]="component?.reason"
+                                *ngIf="component?.reason && type === 'recommendation' && comp?.name">Why this
+                                dependency?</span>
                             <!--
                                 <reco-name [name]="comp?.name" [reason]="comp?.recommendation?.reason" *ngIf="comp?.recommendation && (comp?.recommendation?.type === 'companion')"></reco-name>
                             -->
@@ -25,12 +27,14 @@
                         <div *ngSwitchCase="'highestCVSS'">
                             <!-- highestCVSS -->
                             <span *ngIf="!comp?.hasSecurityIssue" [innerText]="'-'"></span>
-                            <ana-progress-meter *ngIf="comp?.hasSecurityIssue" [config]="comp?.securityDetails?.progressReport"></ana-progress-meter>
+                            <ana-progress-meter *ngIf="comp?.hasSecurityIssue"
+                                [config]="comp?.securityDetails?.progressReport"></ana-progress-meter>
                         </div>
                         <div *ngSwitchCase="'cveIdOfH'">
                             <!-- cveIdOfHeighest CVSS -->
                             <span *ngIf="!comp?.hasSecurityIssue" [innerText]="'-'"></span>
-                            <span *ngIf="comp?.hasSecurityIssue" [innerText]="comp?.securityDetails && comp?.securityDetails?.highestIssue?.cve"></span>
+                            <span *ngIf="comp?.hasSecurityIssue"
+                                [innerText]="comp?.securityDetails && comp?.securityDetails?.highestIssue?.cve"></span>
                         </div>
                         <!-- Action -->
                         <!-- <div *ngSwitchCase="'action'" class="action">
@@ -42,28 +46,35 @@
                         </div> -->
                         <!-- Security Card -->
 
-                        
-                        
+
+
                         <!-- Insights Card -->
                         <div *ngSwitchCase="'alternate'">
                             <!-- alternate -->
                             <span [innerText]="comp?.recommendation?.componentInformation?.name || '------'"></span>
-                            <span class="recommendation-reason" [tooltip]="comp?.recommendation?.reason" *ngIf="comp?.recommendation?.reason && comp?.recommendation?.componentInformation?.name">Why this dependency?</span>
+                            <span class="recommendation-reason" [tooltip]="comp?.recommendation?.reason"
+                                *ngIf="comp?.recommendation?.reason && comp?.recommendation?.componentInformation?.name">Why
+                                this dependency?</span>
                         </div>
                         <div *ngSwitchCase="'feedback'">
                             <!-- feedback -->
-                            <component-feedback [genericInformation]="genericInformation" [feedback]="component?.recommendation?.feedback || component?.feedback"></component-feedback>
+                            <component-feedback [genericInformation]="genericInformation"
+                                [feedback]="component?.recommendation?.feedback || component?.feedback">
+                            </component-feedback>
                         </div>
                         <div *ngSwitchCase="'confidence'">
                             <!-- confidence -->
-                            <ana-progress-meter *ngIf="comp?.recommendation?.confidenceScore" [config]="comp?.recommendation?.confidenceScore"></ana-progress-meter>
-                            <ana-progress-meter *ngIf="component?.confidenceScore" [config]="component?.confidenceScore"></ana-progress-meter>
-                            <span *ngIf="!comp?.recommendation?.confidenceScore && !component?.confidenceScore">-----</span>
+                            <ana-progress-meter *ngIf="comp?.recommendation?.confidenceScore"
+                                [config]="comp?.recommendation?.confidenceScore"></ana-progress-meter>
+                            <ana-progress-meter *ngIf="component?.confidenceScore"
+                                [config]="component?.confidenceScore"></ana-progress-meter>
+                            <span
+                                *ngIf="!comp?.recommendation?.confidenceScore && !component?.confidenceScore">-----</span>
                         </div>
                         <!-- Insights Card -->
 
-                        
-                        
+
+
                         <!-- Licenses Card -->
                         <div *ngSwitchCase="'licensesAffected'">
                             <!-- licensesAffected -->
@@ -79,35 +90,43 @@
                         </div>
                         <!-- Licenses Card -->
 
-                        
-                        
+
+
                         <!-- Component Details Card -->
                         <div *ngSwitchCase="'componentCheck'">
                             <!-- componentCheck -->
-                            <span [ngClass]="{'indicator security': true, 'pficon-warning-triangle-o security-issue': component?.hasSecurityIssue, 'pficon-ok': !component?.hasSecurityIssue}"></span>
-                            <span [ngClass]="{'indicator usage': true, 'pficon-warning-triangle-o usage-outlier': component?.isUsageOutlier, 'pficon-ok': !component?.isUsageOutlier}"></span>
-                            <span [ngClass]="{'indicator license': true, 'pficon-warning-triangle-o license-issue': component?.hasLicenseIssue, 'pficon-ok': !component?.hasLicenseIssue}"></span>
+                            <span
+                                [ngClass]="{'indicator security': true, 'pficon-warning-triangle-o security-issue': component?.hasSecurityIssue, 'pficon-ok': !component?.hasSecurityIssue}"></span>
+                            <span
+                                [ngClass]="{'indicator usage': true, 'pficon-warning-triangle-o usage-outlier': component?.isUsageOutlier, 'pficon-ok': !component?.isUsageOutlier}"></span>
+                            <span
+                                [ngClass]="{'indicator license': true, 'pficon-warning-triangle-o license-issue': component?.hasLicenseIssue, 'pficon-ok': !component?.hasLicenseIssue}"></span>
                         </div>
+                         <!-- Component Details Card -->
                         <div *ngSwitchCase="'helpUsKnownMore'">
                             <!-- Help us know more about dependencies - get tags -->
                         </div>
                         <div *ngSwitchCase="'collapse'">
                             <!-- Toggle -->
                             <div class="toggler">
-                                <i [ngClass]="{'fa': true, 'fa-angle-up': comp?.isOpen, 'fa-angle-down': !comp?.isOpen}" aria-hidden="true"></i>
+                                <i [ngClass]="{'fa': true, 'fa-angle-up': comp?.isOpen, 'fa-angle-down': !comp?.isOpen}"
+                                    aria-hidden="true"></i>
                             </div>
-                        </div>
-                        <!-- Component Details Card -->
+                        </div>                      
                     </div>
                 </div>
             </div>
-            
+
             <div *ngIf="comp?.isOpen" class="accordion-body">
-                <div [ngClass]="{'col-xs-12': true, 'col-md-6 common-section': comp?.recommendation, 'col-md-12': !comp?.recommendation}" *ngIf="comp">
-                    <component-snippet [view]="!comp?.recommendation ? 'normal' : 'split'" [component]="comp"></component-snippet>
+                <div [ngClass]="{'col-xs-12': true, 'col-md-6 common-section': comp?.recommendation, 'col-md-12': !comp?.recommendation}"
+                    *ngIf="comp">
+                    <component-snippet [view]="!comp?.recommendation ? 'normal' : 'split'" [component]="comp">
+                    </component-snippet>
                 </div>
-                <div class="col-xs-12 col-md-6 recommendation-section common-section" *ngIf="comp?.recommendation?.componentInformation">
-                    <component-snippet [view]="'split'" [component]="comp?.recommendation?.componentInformation"></component-snippet>
+                <div class="col-xs-12 col-md-6 recommendation-section common-section"
+                    *ngIf="comp?.recommendation?.componentInformation">
+                    <component-snippet [view]="'split'" [component]="comp?.recommendation?.componentInformation">
+                    </component-snippet>
                 </div>
             </div>
         </div>
