Snyk logo an lock implementation

--- a/src/app/stack/card-details/card-details.component.less
+++ b/src/app/stack/card-details/card-details.component.less
@@ -18,3 +18,17 @@
 .analytics-card-details {
     border-top: 2px solid @steelBlue;
 }
+
+.power {
+    margin-top: 2em;
+    font-size: 1.4em;
+    font-weight: 400;
+    color: black;
+    margin-left: 1em;
+    text-align: right;
+}
+.logo {
+    margin-top: 2em;
+    width: 6em;
+    height: 6em;
+}
