--- a/src/app/stack/card-details/card-details.component.html
+++ b/src/app/stack/card-details/card-details.component.html
@@ -1,11 +1,22 @@
 <div class="col-xs-12 analytics-card-details">
-    <h2 [innerText]="details?.title"></h2>
-    <p [innerText]="details?.titleDescription"></p>
-    <div *ngIf="details?.reportInformations && details?.reportInformations.length > 1">
+
+    <div class="col-xs-10 pl-0 ml-0">
+        <h2 [innerText]="details?.title"></h2>
+        <p [innerText]="details?.titleDescription"></p>
+    </div>
+    <div class="col-xs-2">
+        <a href="/" title="Sign up with Snyk">
+            <span class="power">Powered By </span>
+            <img src="../../.././assets/icon/snky-logo.png" alt="snyk-logo" class="logo" />
+        </a>
+    </div>
+
+    <ng-container *ngIf="details?.reportInformations && details?.reportInformations.length > 1">
         <tabset>
             <tab *ngFor="let tabz of tabs" (select)="tabz.active = true"
                 [customClass]="tabz.active ? 'active-menu-item' : 'inactive-menu'">
                 <ng-template tabHeading>
+                    <span *ngIf="tabz?.title === 'Dependencies with Private Vulnerabilities'" class="fa fa-lock"></span>
                     <span [innerHtml]="tabz.title"></span>
                     <span [innerHtml]="tabz?.content?.componentDetails?.length || '0'" class="badge"></span>
                 </ng-template>
@@ -14,7 +25,7 @@
 
             </tab>
         </tabset>
-    </div>
+    </ng-container>
     <div *ngIf="details?.reportInformations && details?.reportInformations.length === 1">
         <report-information [genericInformation]="genericInformation" [report]="details?.reportInformations[0]"
             [repoInfo]="repoInfo"></report-information>
