--- a/src/app/stack/card-details/component-information/component-information.component.less
+++ b/src/app/stack/card-details/component-information/component-information.component.less
@@ -14,6 +14,9 @@
     .active-card {
         border: 1px solid @steelBlue;
     }
+    .name {
+        color: @steelBlue;
+    }
     .card-pf {
         min-height: 75px;
         margin: 10px 0;
