--- a/src/app/stack/card-details/component-information/component-snippet/component-snippet.component.less
+++ b/src/app/stack/card-details/component-information/component-snippet/component-snippet.component.less
@@ -16,11 +16,12 @@
     .component-version {
         background: @greyBg;
         width: 60%;
-        text-align: center;
+        text-align: left;
         min-height: 110px;
         max-height: 180px;
         overflow-y: auto;
         padding: 15px;
+        margin-bottom: .8em;
 
         &:after {
             .pseudo-clear;
@@ -32,12 +33,13 @@
     .small-version-box {
         float: left;
         margin-right: 15px;
-        width: 35%;
+        width: 20%;
     }
     .common-table {
         display: table;
         width: 100%;
         min-height: 30px;
+        margin-top: .5em;
     }
     .component-licenses, .component-tags {
         padding-top: 10px;
@@ -76,17 +78,67 @@
         }
         margin-bottom: 10px;
     }
+    .severity {
+        padding: 5px 5px 5px 3px;
+        width: 150px;
+        height: 2px;
+        border-radius: 25px;
+        margin-right: 2px;
+        font-size: 13px;
+        text-transform: capitalize;
+            &.high {
+                border: 2px solid #ac1a46;
+                color: #ac1a46;
+            }
+            &.medium {
+                border: 2px solid #ffa500;
+                color: #ffa500;
+            }
+            &.low {
+                border: 2px solid #73ad21;
+                color: #73ad21;
+            }
+    }
+    .circle {
+        border-radius: 50%;
+        width: 10px;
+        height: 10px;
+        padding: 2px 5px;
+        color: white;
+        text-align: center;
+        font-weight: bold;
+        &.high {
+            background-color: #ac1a46;
+        }
+        &.medium {
+            background-color: #ffa500;
+        }
+        &.low {
+            background-color: #73ad21;
+        }
+    }
+    .name {
+        color: @steelBlue;
+        margin-left: .2em;
+        margin-right: .6em;
+        font-size: 13px;
+    }
     .github-osio-box {
         background: @greyBg;
-        padding: 10px;
         float: left;
+        width: 40%;
+        text-align: left;
         min-height: 110px;
+        max-height: 180px;
+        overflow-y: auto;
+        padding: 15px;
+        margin-bottom: .8em;
         .date-class {
             color: @pf-black-500;
         }
         .box-header {
             float: left;
-            margin-right: 20px;
+            margin-left: 1.5em;
             font-size: 13px;
         }
         .left {
@@ -95,7 +147,7 @@
         .github {
             .side {
                 float: left;
-                margin-right: 10px;
+                margin-left: 2em;
             }
             &:after {
                 .pseudo-clear;
