--- a/src/app/stack/card-details/component-details/component-details.component.html
+++ b/src/app/stack/card-details/component-details/component-details.component.html
@@ -1,10 +1,11 @@
 <div class="analytics-component-details">
     <div *ngIf="type === 'component'" class="component-information-container">
         <component-information [genericInformation]="genericInformation" [type]="type" [serial]="serial"
-            [positions]="positions" [component]="compDetails?.componentInformation" [repoInfo]="repoInfo">
+            [tabType]="tabType" [positions]="positions" [component]="compDetails?.componentInformation"
+            [repoInfo]="repoInfo">
         </component-information>
     </div>
-    
+
     <div *ngIf="type === 'recommendation'" class="component-information-container">
         <component-information [genericInformation]="genericInformation" [type]="type" [serial]="serial"
             [positions]="positions" [component]="compDetails?.recommendationInformation" [repoInfo]="repoInfo">
