--- a/src/app/stack/card-details/component-information/component-information.component.less
+++ b/src/app/stack/card-details/component-information/component-information.component.less
@@ -17,6 +17,10 @@
     .name {
         color: @steelBlue;
     }
+    .transCount {
+        color: #d31b1b;
+        font-size: 15px;
+    }
     .card-pf {
         min-height: 75px;
         margin: 10px 0;
