logo position adjusted

--- a/src/app/stack/report-summary/report-summary-card/report-summary-title/report-summary-title.component.less
+++ b/src/app/stack/report-summary/report-summary-card/report-summary-title/report-summary-title.component.less
@@ -21,13 +21,13 @@
         }
     }
     .branding {
-        margin-left: 7em;
+        margin-left: 2em;
         margin-top: -.3em;
         font-size: 13px;
     }
     .monologo {
         margin-top: -.2em;
-        margin-left: -1em;
+        margin-left: -.5em;
         width: 4.5em;
         height: 2.5em;
     }
