--- a/src/app/stack/report-summary/report-summary-card/report-summary-title/report-summary-title.component.html
+++ b/src/app/stack/report-summary/report-summary-card/report-summary-title/report-summary-title.component.html
@@ -3,8 +3,9 @@
         <span [class]="title?.titleIcon" aria-hidden="true"></span>
         {{title?.titleText}}
         <span *ngIf="title?.titleText === 'Security Issues' || title?.titleText ===  'Dependency Details'">
-            <span class="branding">Powered By</span>
-            <img src="../../../../../assets/icon/snyk-logo-monochrome.png" alt="snyk-mono" class="monologo" />
+            <span class="branding">Powered By
+                <img src="../../../../../assets/icon/snyk-logo-monochrome.png" alt="snyk-mono" class="monologo" />
+            </span>
         </span>
     </div>
     <span [ngStyle]="{'background-color': title?.notificationIconBgColor}" class="ana-notification-icon pull-right"
