--- a/src/app/stack/card-details/component-information/component-snippet/component-snippet.component.html
+++ b/src/app/stack/card-details/component-information/component-snippet/component-snippet.component.html
@@ -124,17 +124,22 @@
             </span>
         </div>
     </div>
-    <br>
     <div class="common-table component-tags"
         *ngIf="component?.allTransitiveDependencies && component?.allTransitiveDependencies.length>0">
         <div class="common-wrapper">
-            <span class="info-head">Transitives with Vulnerabilities</span>
-            <span [innerHtml]="component?.allTransitiveDependencies.length" class="badge"></span>
-            <!-- <span class="toggler">
-                <i [ngClass]="{'fa': true, 'fa-angle-up': component?.isOpen, 'fa-angle-down': !component?.isOpen}"
-                    aria-hidden="true"></i>
-            </span> -->
-            <report-information [report]="component.transitiveInfo"></report-information>
+            <div class="transitive-head">
+                <span class="trans-dropdown">
+                    <i [ngClass]="{'fa': true, 'fa-angle-right': !component?.showTransitive, 'fa-angle-down': component?.showTransitive}"
+                        aria-hidden="true"></i>
+                </span>
+                <span
+                    [innerText]='component?.showTransitive ? "Hide Transitives with Vulnerabilities":"Show Transitives with Vulnerabilities"'>
+                </span>
+                <span [innerHtml]="component?.allTransitiveDependencies.length" class="badge"></span>
+            </div>
+
+            <report-information *ngIf="component.showTransitive" [report]="component.transitiveInfo">
+            </report-information>
             <!-- <span *ngIf="component?.crowdSourcing?.tags && component?.crowdSourcing?.tags?.length > 0"
             class="common-container tags-container">
             <span [innerText]="tag" *ngFor="let tag of component?.crowdSourcing?.tags"></span>
