--- a/src/app/stack/card-details/report-information/report-information.component.html
+++ b/src/app/stack/card-details/report-information/report-information.component.html
@@ -3,9 +3,10 @@
         <div [class]="header.className" *ngFor="let header of report?.headers" [innerText]="header.text"></div>
     </div>
 
-    <component-details [genericInformation]="genericInformation" (click)="handleAccordion($event, cdetail)" [serial]="i"
-        [type]="report?.type" [positions]="report?.headers" [compDetails]="cdetail" [repoInfo]="repoInfo"
-        [tabType]="report?.tabType" *ngFor="let cdetail of report?.componentDetails; let i = index;">
+    <component-details [genericInformation]="genericInformation" (click)="handleAccordion($event, cdetail)"
+        (click)="handleTransitive($event, cdetail)" [serial]="i" [type]="report?.type" [positions]="report?.headers"
+        [compDetails]="cdetail" [repoInfo]="repoInfo" [tabType]="report?.tabType"
+        *ngFor="let cdetail of report?.componentDetails; let i = index;">
     </component-details>
 
     <no-data *ngIf="!report?.componentDetails || report?.componentDetails.length === 0"
