--- a/src/app/stack/card-details/card-details.component.less
+++ b/src/app/stack/card-details/card-details.component.less
@@ -21,14 +21,16 @@
 
 .power {
     margin-top: 2em;
-    font-size: 1.4em;
+    font-size: 1.2em;
     font-weight: 400;
     color: black;
     margin-left: 1em;
-    text-align: right;
+    float: left;
 }
 .logo {
-    margin-top: 2em;
-    width: 6em;
-    height: 6em;
+    margin-top: 1.5em;
+    margin-bottom: 1.5em;
+    width: 4.5em;
+    height: 4.5em;
+    float: left;
 }
