--- a/src/app/stack/card-details/component-information/component-information.component.less
+++ b/src/app/stack/card-details/component-information/component-information.component.less
@@ -14,6 +14,10 @@
     .active-card {
         border: 1px solid @steelBlue;
     }
+    .transitive-card {
+        border: 0;
+        border-left: solid #a448f0;
+    }
     .name {
         color: @steelBlue;
     }
