--- a/src/app/stack/card-details/component-information/component-snippet/component-snippet.component.less
+++ b/src/app/stack/card-details/component-information/component-snippet/component-snippet.component.less
@@ -33,7 +33,7 @@
     .small-version-box {
         float: left;
         margin-right: 15px;
-        width: 20%;
+        width: 25%;
     }
     .common-table {
         display: table;
@@ -147,6 +147,15 @@
         text-align: center;
         padding-right: 10px;
         padding-top: 4px;
+    }
+    .tsansitive-details {
+        float: left;
+        width: 60%;
+        text-align: left;
+        min-height: 110px;
+        max-height: 180px;
+        overflow-y: auto;
+        margin-top: -1em;
     }
     .github-osio-box {
         background: @greyBg;
